primera version para el curso, commit2

--- a/subir-nuestros-datos-a-sas-viya.html
+++ b/subir-nuestros-datos-a-sas-viya.html
@@ -282,7 +282,7 @@ La pantalla a la que llegamos en este caso, presenta algunas opciones que debemo
 En nuestro archivo de ejemplo, el delimitador de columnas es “;”, por lo tanto debemos modificar el valor por defecto “;”:</li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-7"></span>
-<img src="./imagenes/cap1_2_subir_csv_1.1.png" alt="Subir CSV"  />
+<img src="./imagenes/cap1_2_subir_csv_1_1.png" alt="Subir CSV"  />
 <p class="caption">
 Figure 1.7: Subir CSV
 </p>
@@ -296,20 +296,20 @@ Figure 1.8: Configuraciones CSV
 <p>También podemos indicar si la primera fila contiene o no los nombres de las columnas.
 Una vez configuradas todas las opciones en base al archivo que vamos a subir, hacemos click en “Importar elemento”.
 Y si todo salió bien, llegamos al final del proceso, con un mensaje que indica que todo salió bien:</p>
-<p><img src="./imagenes/cap1_2_subir_csv_3.0_OK.png" style="display: block; margin: auto;" /></p>
+<p><img src="./imagenes/cap1_2_subir_csv_3_0_OK.png" style="display: block; margin: auto;" /></p>
 </div>
 <div id="posibles-errores" class="section level3">
 <h3><span class="header-section-number">2.2.2</span> Posibles errores</h3>
 <p>Si obtenemos un error feo, como el siguiente:</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-10"></span>
-<img src="./imagenes/cap1_2_subir_csv_2.1_ERROR.png" alt="Error de encoding"  />
+<img src="./imagenes/cap1_2_subir_csv_2_1_ERROR.png" alt="Error de encoding"  />
 <p class="caption">
 Figure 1.10: Error de encoding
 </p>
 </div>
 <p>Tenemos un problema de encoding en el archivo, esto pasa cuando el archivo se guardo con un juego de caracteres diferente al que le indicamos a SAS al momento de subir el archivo. Un formato muy común y el que vamos a usar es “UTF-8” este cambio lo podemos hacer desde un editor de texto, como “Notepad++”</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-11"></span>
-<img src="./imagenes/cap1_2_subir_csv_2.2_CORREGIR_ENCODING.png" alt="Modificar encoding"  />
+<img src="./imagenes/cap1_2_subir_csv_2_2_CORREGIR_ENCODING.png" alt="Modificar encoding"  />
 <p class="caption">
 Figure 1.11: Modificar encoding
 </p>
