primera version para el curso, commit 3

--- a/mapas.html
+++ b/mapas.html
@@ -198,7 +198,7 @@ Para esto haremos uso de tablas que ya estan precargadas en SAS Viya, y que reun
 <li><p>Nuevo reporte, opción “Explorar y visualizar datos”</p></li>
 <li>Agregamos la tabla CAS al reporte:
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-3"></span>
-<img src="./imagenes/cap6_img_01_AgregarCAS.png" alt="Añadir fuente de datos"  />
+<img src="./imagenes/cap6_img_01_AgregarCAS.PNG" alt="Añadir fuente de datos"  />
 <p class="caption">
 Figure 1.3: Añadir fuente de datos
 </p>
@@ -212,7 +212,7 @@ Figure 1.4: Sección-Manzana
 </div></li>
 <li>Generamos el elemento calculado -elemento greográfico- “SECCION_MANZANA”
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-5"></span>
-<img src="./imagenes/cap6_img_03_GEO_SECCION_MANZANA.png" alt="Seción-Manzana-GEO"  />
+<img src="./imagenes/cap6_img_03_GEO_SECCION_MANZANA.PNG" alt="Seción-Manzana-GEO"  />
 <p class="caption">
 Figure 1.5: Seción-Manzana-GEO
 </p>
@@ -226,7 +226,7 @@ Figure 1.6: Sección-Manzana-Parcela
 </div></li>
 <li>Generamos el elemento calculado, -elemento greográfico- “SECCION_MANZANA_PARCELA_GEO”
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-7"></span>
-<img src="./imagenes/cap6_img_05_GEO_SECCION_MANZANA_PARCELA_GEO.png" alt="Sección-Manzana-Parcela-GEO"  />
+<img src="./imagenes/cap6_img_05_GEO_SECCION_MANZANA_PARCELA_GEO.PNG" alt="Sección-Manzana-Parcela-GEO"  />
 <p class="caption">
 Figure 1.7: Sección-Manzana-Parcela-GEO
 </p>
