--- a/practica-reportes-2.html
+++ b/practica-reportes-2.html
@@ -208,7 +208,7 @@ Cada registro de esta tabla representa un beneficio. Cada beneficio corresponde 
 <p>Por el comportamiento predeterminado, SAS nos tomará también como medidas la edad de una persona, el ID interno de una tabla (ID_EXPEDIENTE, ID_BENEFICIO), el año caratulación, etc.
 Por lo tanto una vez añadida la fuenta de datos al reporte, debemos seleccionar las categorías que fueron interpretadas como medidas y, elemento por elemmento, convertirlos a categoria:</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-2"></span>
-<img src="./imagenes/cap5_img1_medidas_to_categ.png" alt="Medida2Categoria"  />
+<img src="./imagenes/cap5_img1_medidas_to_categ.PNG" alt="Medida2Categoria"  />
 <p class="caption">
 Figure 1.2: Medida2Categoria
 </p>
@@ -229,7 +229,7 @@ La frecuencia es una medida que tendremos siempre disponible y nos servirá para
 <li>Elegimos “DISTINCT” y arrastramos hacia el área de construcción del elemento calculado:</li>
 </ol>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-3"></span>
-<img src="./imagenes/cap5_img2_distinct.png" alt="DISTINCT"  />
+<img src="./imagenes/cap5_img2_distinct.PNG" alt="DISTINCT"  />
 <p class="caption">
 Figure 1.3: DISTINCT
 </p>
@@ -237,14 +237,14 @@ Figure 1.3: DISTINCT
 <p>Luego hacemos click en la sección “Elementos de Datos”, seleccionamos el “ID_BENEFICIO” y lo llevamos como argumento a la función “DISTINCT”.
 El elemento calculado debe quedar como en la siguiente imagen:</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-4"></span>
-<img src="./imagenes/cap5_img3_distinct.png" alt="DISTINCT"  />
+<img src="./imagenes/cap5_img3_distinct.PNG" alt="DISTINCT"  />
 <p class="caption">
 Figure 1.4: DISTINCT
 </p>
 </div>
 <p>Una vez guardado, si vamos a la lista de elementos de datos, veremos que se agregó en la lista de elementos de datos, la medida “Total Beneficios”, como medida de agregación:</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-5"></span>
-<img src="./imagenes/cap5_img4_distinct.png" alt="Medida de agregación"  />
+<img src="./imagenes/cap5_img4_distinct.PNG" alt="Medida de agregación"  />
 <p class="caption">
 Figure 1.5: Medida de agregación
 </p>
@@ -261,7 +261,7 @@ Para ser precisos deberíamos considerar como ID el tipo y numero de documento, 
 <li>Esta función acepta dos argumentos, que son las cadenas de caracteres a concatenar.</li>
 </ol>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-6"></span>
-<img src="./imagenes/cap5_img5_concatenate.png" alt="DISTINCT"  />
+<img src="./imagenes/cap5_img5_concatenate.PNG" alt="DISTINCT"  />
 <p class="caption">
 Figure 1.6: DISTINCT
 </p>
@@ -270,7 +270,7 @@ Figure 1.6: DISTINCT
 <li>En nuestro caso aunque podríamos concatenar directamente el tipo y número de documento, como preferimos un guión en el medio, vamos a usar dos funciones “Concatenate” anidades en el mismo elemento calculado:</li>
 </ol>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-7"></span>
-<img src="./imagenes/cap5_img6_concatenatecap5_2.png" alt="DISTINCT"  />
+<img src="./imagenes/cap5_img6_concatenatecap5_2.PNG" alt="DISTINCT"  />
 <p class="caption">
 Figure 1.7: DISTINCT
 </p>
@@ -291,13 +291,13 @@ La función “Format” la encontramos dentro del grupo de funciones de “Text
 <li>Seguimos en el mismo panel de opciones y en la parte inferior, destildamos la opción “Usar valor abreviado”.</li>
 </ol>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-9"></span>
-<img src="./imagenes/cap5_img7_keyvalue.png" alt="DISTINCT"  />
+<img src="./imagenes/cap5_img7_keyvalue.PNG" alt="DISTINCT"  />
 <p class="caption">
 Figure 1.9: DISTINCT
 </p>
 </div>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-10"></span>
-<img src="./imagenes/cap5_img8_keyvalue.png" alt="DISTINCT"  />
+<img src="./imagenes/cap5_img8_keyvalue.PNG" alt="DISTINCT"  />
 <p class="caption">
 Figure 1.10: DISTINCT
 </p>
@@ -308,7 +308,7 @@ Elegimos duplicar y cambiamos la medida, reemplazando la frecuencia por “Total
 <p>Como vemos, la cantidad de beneficios coincide con la cantidad de registros de la tabla.
 Hacemos lo mismo y generemos otro gráfico de valor clave, tomando como medida en este caso el “Total Beneficiarios”</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-11"></span>
-<img src="./imagenes/cap5_img9_keyvalues.png" alt="DISTINCT"  />
+<img src="./imagenes/cap5_img9_keyvalues.PNG" alt="DISTINCT"  />
 <p class="caption">
 Figure 1.11: DISTINCT
 </p>
@@ -323,7 +323,7 @@ Figure 1.11: DISTINCT
 <li>Duplicamos el gráfico y seleccionamos como medida, “Total Beneficiarios”</li>
 </ol>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-12"></span>
-<img src="./imagenes/cap5_img10_tortas.png" alt="DISTINCT"  />
+<img src="./imagenes/cap5_img10_tortas.PNG" alt="DISTINCT"  />
 <p class="caption">
 Figure 1.12: DISTINCT
 </p>
@@ -359,7 +359,7 @@ Figure 1.12: DISTINCT
 <li>Probamos los filtros y la interacción entre los gráficos</li>
 </ol>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-13"></span>
-<img src="./imagenes/cap5_img11_tortas.png" alt="DISTINCT"  />
+<img src="./imagenes/cap5_img11_tortas.PNG" alt="DISTINCT"  />
 <p class="caption">
 Figure 1.13: DISTINCT
 </p>
