--- a/union-de-fuentes-de-datos.html
+++ b/union-de-fuentes-de-datos.html
@@ -204,13 +204,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>Iniciamos un nuevo reporte usando la opción del menú: “Explorar y visualizar datos”</li>
 </ol>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-1"></span>
-<img src="./imagenes/cap3_union_1_nuevo_report.png" alt="Explorar y visualizar datos"  />
+<img src="./imagenes/cap3_union_1_nuevo_report.PNG" alt="Explorar y visualizar datos"  />
 <p class="caption">
 Figure 1.1: Explorar y visualizar datos
 </p>
 </div>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-2"></span>
-<img src="./imagenes/cap3_union_2.png" alt="Nuevo reporte"  />
+<img src="./imagenes/cap3_union_2.PNG" alt="Nuevo reporte"  />
 <p class="caption">
 Figure 1.2: Nuevo reporte
 </p>
@@ -221,7 +221,7 @@ Otra opción es hacer click en el icono de la derecha, “Acciones” y seleccio
 <li><p>En la siguiente ventana “Abrir fuente de datos” buscamos nuestra tabla, para ello basta con escribir las primeras letras para filtrar el listado de tablas disponibles hasta que podamos encontrar la tabla deseada:</p></li>
 </ol>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-3"></span>
-<img src="./imagenes/cap3_union_3.png" alt="Selección de tabla"  />
+<img src="./imagenes/cap3_union_3.PNG" alt="Selección de tabla"  />
 <p class="caption">
 Figure 1.3: Selección de tabla
 </p>
@@ -231,7 +231,7 @@ Figure 1.3: Selección de tabla
 <li><p>Volvemos al icono que nos abre las opciones de datos y elegimos en este caso “Nueva unión de fuentes de datos…”</p></li>
 </ol>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-4"></span>
-<img src="./imagenes/cap3_union_5bis.png" alt="Nueva unión de fuentes de datos"  />
+<img src="./imagenes/cap3_union_5bis.PNG" alt="Nueva unión de fuentes de datos"  />
 <p class="caption">
 Figure 1.4: Nueva unión de fuentes de datos
 </p>
@@ -245,7 +245,7 @@ En este caso vamos a elegir la segunda tabla que subimos en el capítulo anterio
 <li>Asignar un nombre a la tabla resultado que crearemos con la unión</li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-5"></span>
-<img src="./imagenes/cap3_union_6.png" alt="Segunda tabla"  />
+<img src="./imagenes/cap3_union_6.PNG" alt="Segunda tabla"  />
 <p class="caption">
 Figure 1.5: Segunda tabla
 </p>
@@ -254,7 +254,7 @@ Figure 1.5: Segunda tabla
 <li>Elegir el tipo de unión</li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-6"></span>
-<img src="./imagenes/cap3_union_8_tipo_union.png" alt="Tipo de unión"  />
+<img src="./imagenes/cap3_union_8_tipo_union.PNG" alt="Tipo de unión"  />
 <p class="caption">
 Figure 1.6: Tipo de unión
 </p>
@@ -265,7 +265,7 @@ Figure 1.6: Tipo de unión
 <li>Seleccionar las columnas que deseamos incluir en la unión</li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-7"></span>
-<img src="./imagenes/cap3_union_9_sel_columnas.png" alt="Selección de columnas"  />
+<img src="./imagenes/cap3_union_9_sel_columnas.PNG" alt="Selección de columnas"  />
 <p class="caption">
 Figure 1.7: Selección de columnas
 </p>
@@ -277,7 +277,7 @@ Figure 1.7: Selección de columnas
 <p>Siempre es sano a medida que avanzamos ir guardando los cambios.
 Guardamos el reporte en nuestra carpeta personal “MyFolder”.</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-8"></span>
-<img src="./imagenes/cap3_union_10_Guardar_Reporte.png" alt="Guardar reporte"  />
+<img src="./imagenes/cap3_union_10_Guardar_Reporte.PNG" alt="Guardar reporte"  />
 <p class="caption">
 Figure 1.8: Guardar reporte
 </p>
@@ -288,7 +288,7 @@ Figure 1.8: Guardar reporte
 <p>Para reforzar este punto y además sumar otras columas a nuestra tabla, vamos a realizar una nueva unión, utilizando como segunda fuente de datos la tabla “DIM_EXPEDIENTE_ELECTRONICO”. Esta tabla tiene todos los expedientes de SADE y datos principales asociados a los mismos, como ser el estado actualizado, la fecha de caratulación, el usuario, la repartición, etc.</p>
 <p>Como mínimo seleccionamos estas columnas para la práctica:</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-9"></span>
-<img src="./imagenes/cap3_union_11_union_con_dim_sel_columns.png" alt="Selección de columnas"  />
+<img src="./imagenes/cap3_union_11_union_con_dim_sel_columns.PNG" alt="Selección de columnas"  />
 <p class="caption">
 Figure 1.9: Selección de columnas
 </p>
@@ -296,7 +296,7 @@ Figure 1.9: Selección de columnas
 <p>Y por último, nuevamente elegimos “Unión izquierda”, porque queremos mantener todos los registros de la primera tabla.
 <i>Explicar más este punto</i></p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-10"></span>
-<img src="./imagenes/cap3_union_12_left_join.png" alt="Left Join"  />
+<img src="./imagenes/cap3_union_12_left_join.PNG" alt="Left Join"  />
 <p class="caption">
 Figure 1.10: Left Join
 </p>
