--- a/practica-reportes-1.html
+++ b/practica-reportes-1.html
@@ -198,7 +198,7 @@ El objetivo de este capítulo es aprender a realizar un reporte sencillo, para v
 <li>En el panel de objetos a nuestra izquiera, vamos a seleccionar Tablas –&gt; Tabla de lista y arrastramos hacia el area de trabajo de la Página 1.</li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-1"></span>
-<img src="./imagenes/cap4_img1_tabla_lista.png" alt="Tabla de lista"  />
+<img src="./imagenes/cap4_img1_tabla_lista.PNG" alt="Tabla de lista"  />
 <p class="caption">
 Figure 1.1: Tabla de lista
 </p>
@@ -211,12 +211,12 @@ Figure 1.1: Tabla de lista
 </ol></li>
 </ul>
 <p>Nótese que hay un <b>asterisco rojo</b> que acompaña la sección “Columnas” eso indica que es obligatorio agregar al menos una columna para que el objeto, en este caso la tabla, se pueda construir.</p>
-<p><img src="./imagenes/cap4_img2_agregar_elementos.png" style="display: block; margin: auto;" /></p>
+<p><img src="./imagenes/cap4_img2_agregar_elementos.PNG" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Seleccionamos las columnas que deseamos visualizar en la tabla y hacemos click en “Aceptar”</li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-3"></span>
-<img src="./imagenes/cap4_img3_seleccionar_columnas.png" alt="Añadir columnas"  />
+<img src="./imagenes/cap4_img3_seleccionar_columnas.PNG" alt="Añadir columnas"  />
 <p class="caption">
 Figure 1.3: Añadir columnas
 </p>
@@ -232,7 +232,7 @@ Es importante aclarar que el objeto “tabla de lista” tiene un límite de reg
 <li>Siempre manteniendo el objeto seleccionado, en este caso nuestra tabla, seleccionamos la sección “filtros” del panel de la derecha:</li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-4"></span>
-<img src="./imagenes/cap4_img4_filtros.png" alt="Filtros sobre objeto"  />
+<img src="./imagenes/cap4_img4_filtros.PNG" alt="Filtros sobre objeto"  />
 <p class="caption">
 Figure 1.4: Filtros sobre objeto
 </p>
@@ -251,7 +251,7 @@ Por ejemplo si quisieramos descartar en todo el reporte los expedientes en “AR
 <li>Vamos al panel de datos de la izquierda y seleccionamos la opción “Aplicar filtro a la fuente de datos…”</li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-5"></span>
-<img src="./imagenes/cap4_img5_filtros_fuente.png" alt="Filtros sobre fuentes de datos"  />
+<img src="./imagenes/cap4_img5_filtros_fuente.PNG" alt="Filtros sobre fuentes de datos"  />
 <p class="caption">
 Figure 1.5: Filtros sobre fuentes de datos
 </p>
@@ -280,7 +280,7 @@ El filtro más comun que existe en todo tablero o reporte es el filtro de fechas
 * Por último, para que el control actúe como filtro sobre la tabla, manteniendo seleccionado el objeto, vamos a la sección “Acciones” del panel de la derecha.
 * Elegimos la tabla de lista, dentro de “Enlaces de objeto”</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-6"></span>
-<img src="./imagenes/cap4_img6_filtros_dinamicos_fecha.png" alt="Barra deslizante"  />
+<img src="./imagenes/cap4_img6_filtros_dinamicos_fecha.PNG" alt="Barra deslizante"  />
 <p class="caption">
 Figure 1.6: Barra deslizante
 </p>
@@ -296,7 +296,7 @@ Para ello podemos usar los controles “lista” o “lista desplegable”. El p
 <li><p>Tratamos de ubicar el objeto a la izquierda de nuestra tabla:</p></li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-7"></span>
-<img src="./imagenes/cap4_img7_filtro_lista.png" alt="Listas"  />
+<img src="./imagenes/cap4_img7_filtro_lista.PNG" alt="Listas"  />
 <p class="caption">
 Figure 1.7: Listas
 </p>
