--- a/subir-nuestros-datos-a-sas-viya.html
+++ b/subir-nuestros-datos-a-sas-viya.html
@@ -288,7 +288,7 @@ Figure 1.7: Subir CSV
 </p>
 </div>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-8"></span>
-<img src="./imagenes/cap1_2_subir_csv_1.png" alt="Configuraciones CSV"  />
+<img src="./imagenes/cap1_2_subir_csv_1.PNG" alt="Configuraciones CSV"  />
 <p class="caption">
 Figure 1.8: Configuraciones CSV
 </p>
