commit 4 previo a 2da clase

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Sergio Lemme  Colaboradores: Ervin Wilneder &amp; Pablo Sanroman" />
 
 
-<meta name="date" content="2019-08-09" />
+<meta name="date" content="2019-08-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -163,9 +163,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.3.1" data-path="practica-reportes-2.html"><a href="practica-reportes-2.html#uso-de-distinct"><i class="fa fa-check"></i><b>5.3.1</b> Uso de DISTINCT</a></li>
 <li class="chapter" data-level="5.3.2" data-path="practica-reportes-2.html"><a href="practica-reportes-2.html#concatenar-cadenas-de-caracteres"><i class="fa fa-check"></i><b>5.3.2</b> Concatenar cadenas de caracteres</a></li>
 </ul></li>
-<li class="chapter" data-level="5.4" data-path="practica-reportes-2.html"><a href="practica-reportes-2.html#grafico-de-barras"><i class="fa fa-check"></i><b>5.4</b> Gráfico de barras</a></li>
-<li class="chapter" data-level="5.5" data-path="practica-reportes-2.html"><a href="practica-reportes-2.html#controles-de-filtros"><i class="fa fa-check"></i><b>5.5</b> Controles de filtros</a></li>
-<li class="chapter" data-level="5.6" data-path="practica-reportes-2.html"><a href="practica-reportes-2.html#acciones-hacer-interactuar-graficos-y-filtros-entre-si"><i class="fa fa-check"></i><b>5.6</b> Acciones, hacer interactuar gráficos y filtros entre sí</a></li>
+<li class="chapter" data-level="5.4" data-path="practica-reportes-2.html"><a href="practica-reportes-2.html#grafico-valor-clave"><i class="fa fa-check"></i><b>5.4</b> Gráfico “Valor Clave”</a></li>
+<li class="chapter" data-level="5.5" data-path="practica-reportes-2.html"><a href="practica-reportes-2.html#grafico-de-torta"><i class="fa fa-check"></i><b>5.5</b> Gráfico de Torta</a></li>
+<li class="chapter" data-level="5.6" data-path="practica-reportes-2.html"><a href="practica-reportes-2.html#grafico-de-barras"><i class="fa fa-check"></i><b>5.6</b> Gráfico de barras</a></li>
+<li class="chapter" data-level="5.7" data-path="practica-reportes-2.html"><a href="practica-reportes-2.html#controles-de-filtros"><i class="fa fa-check"></i><b>5.7</b> Controles de filtros</a></li>
+<li class="chapter" data-level="5.8" data-path="practica-reportes-2.html"><a href="practica-reportes-2.html#acciones-hacer-interactuar-graficos-y-filtros-entre-si"><i class="fa fa-check"></i><b>5.8</b> Acciones, hacer interactuar gráficos y filtros entre sí</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="mapas.html"><a href="mapas.html"><i class="fa fa-check"></i><b>6</b> Mapas</a></li>
 <li class="divider"></li>
@@ -191,7 +193,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Capacitacion SAS Viya GCBA SSSYP</h1>
 <p class="author"><em>Sergio Lemme <br>Colaboradores: Ervin Wilneder &amp; Pablo Sanroman</em></p>
-<p class="date"><em>2019-08-09</em></p>
+<p class="date"><em>2019-08-15</em></p>
 </div>
 <div id="prefacio" class="section level1 unnumbered">
 <h1>Prefacio</h1>
